--- a/gemini/prompts/intro_prompt_design.ipynb
+++ b/gemini/prompts/intro_prompt_design.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Designherdigital/4gaBoards/blob/main/gemini/prompts/intro_prompt_design.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "ur8xi4C7S06n"
       },
@@ -143,12 +153,12 @@
       "metadata": {
         "id": "itq3l5P9x254"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 11,
       "metadata": {
         "id": "tFy3H3aPgx12"
       },
@@ -170,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "NyKGtVQjgx13"
       },
@@ -195,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "154137022fb6"
       },
@@ -221,17 +231,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "Nqwi-5ufWp_B"
+        "id": "Nqwi-5ufWp_B",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 284
+        },
+        "outputId": "7848dae7-7dfc-44fc-c086-3428f2608f23"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "PROJECT_ID is not set. Please replace '[your-project-id]' with your Google Cloud project ID or set the GOOGLE_CLOUD_PROJECT environment variable.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-49460831.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mPROJECT_ID\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GOOGLE_CLOUD_PROJECT\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mPROJECT_ID\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PROJECT_ID is not set. Please replace '[your-project-id]' with your Google Cloud project ID or set the GOOGLE_CLOUD_PROJECT environment variable.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: PROJECT_ID is not set. Please replace '[your-project-id]' with your Google Cloud project ID or set the GOOGLE_CLOUD_PROJECT environment variable."
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
         "PROJECT_ID = \"[your-project-id]\"  # @param {type: \"string\", placeholder: \"[your-project-id]\", isTemplate: true}\n",
         "if not PROJECT_ID or PROJECT_ID == \"[your-project-id]\":\n",
-        "    PROJECT_ID = str(os.environ.get(\"GOOGLE_CLOUD_PROJECT\"))\n",
+        "    PROJECT_ID = os.environ.get(\"GOOGLE_CLOUD_PROJECT\")\n",
+        "    if not PROJECT_ID:\n",
+        "      raise ValueError(\"PROJECT_ID is not set. Please replace '[your-project-id]' with your Google Cloud project ID or set the GOOGLE_CLOUD_PROJECT environment variable.\")\n",
+        "\n",
         "\n",
         "LOCATION = os.environ.get(\"GOOGLE_CLOUD_REGION\", \"us-central1\")"
       ]
@@ -853,7 +883,8 @@
     "colab": {
       "name": "intro_prompt_design.ipynb",
       "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
